horizontal nav bar to fix element overlapping

--- a/css/index.css
+++ b/css/index.css
@@ -9,7 +9,7 @@ canvas {
 iframe {
   border: none;
   width: 100%;
-  height: 25%;
+  height: 10%;
   overflow: hidden;
   position: fixed;
 }
