--- a/css/page.css
+++ b/css/page.css
@@ -12,11 +12,10 @@ a {
 }
 
 iframe {
-  position: fixed;
   border: none;
   width: 100%;
+  height: 10%;
   overflow: hidden;
-  height: 25%;
 }
 
 .main {
